overflow issue on mobile fix 1

--- a/my-app/src/components/Navbar.css
+++ b/my-app/src/components/Navbar.css
@@ -178,6 +178,6 @@
   }
 }
 
-body {
+body, html {
   overflow-x: hidden;
 }
